changed some html and css

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
       </section>
       <section class="about-me" id="about-me">
-        <article class="article-about-me">
+        <div class="article-about-me">
           <h2>About me!</h2>
           <img sizes="(max-width: 375px) 90vw, (max-width: 480px) 90vw, 70vw" srcset="img/my-photo-medium.jpg 375w, img/my-photo-large.jpg 480w, img/my-photo-extralarge.jpg 768w" src="img/my-photo-large.jpg" alt="picture of website authour">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor inventore eum odio cupiditate ea.
@@ -76,7 +76,7 @@
             pariatur voluptates maxime minima ullam eum, quisquam incidunt cum. Ea repellendus nulla consequatur aut magni inventore incidunt provident commodi,
             sit non laudantium autem deleniti nesciunt odio, repellat repudiandae unde possimus maxime.
           </p>
-        </article>
+        </div>
       </section>
       <footer>
         <div class="footer">
