--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
         <div class="copy">
          <div class="copyright">
-           &copy Feoktistov D.S. Udacity front-end nanodegree student 2018
+           &copy; Feoktistov D.S. Udacity front-end nanodegree student 2018
          </div>
          <div class="social">
            <a href="https://www.facebook.com/dima.feoktistov.9" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -106,11 +106,11 @@
       </footer>
       </div>
      <ul class="m-menu-items">
-       <li><button class="close-menu">&times</button></li>
+       <li><button class="close-menu">&times;</button></li>
        <li><a href="#featured" class="menu-link button">Portfolio</a></li>
        <li><a href="#about-me" class="menu-link button">About me</a></li>
        <li><a href="#home" class="menu-link button">Home</a></li>
      </ul>
-    <script src="js/app.js" charset="utf-8"></script>
+    <script src="js/app.js"></script>
    </body>
 </html>
