Updated img srcset element

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <section class="about-me" id="about-me">
         <div class="article-about-me">
           <h2>About me!</h2>
-          <img sizes="(max-width: 375px) 90vw, (max-width: 480px) 90vw, 70vw" srcset="img/my-photo-medium.jpg 375w, img/my-photo-large.jpg 480w, img/my-photo-extralarge.jpg 768w" src="img/my-photo-large.jpg" alt="picture of website authour">
+          <img sizes="(max-width: 375px) 90vw, (max-width: 480px) 90vw, 768px" srcset="img/my-photo-medium.jpg 375w, img/my-photo-large.jpg 480w, img/my-photo-extralarge.jpg 768w" src="img/my-photo-large.jpg" alt="picture of website authour">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor inventore eum odio cupiditate ea.
             Obcaecati deleniti quidem soluta neque nemo non quae eos voluptatem! Incidunt velit ducimus saepe laudantium cumque expedita molestiae,
             officia illo quidem corporis suscipit enim quam ab, dicta totam quasi. Explicabo perferendis veritatis corporis nulla libero. Ea.
